syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.training.marketplace.product.controller.modal.request";

import "product.proto";

message GetProductDetailRequest{
  string product_id = 1;
}
